--- a/feature-camerax-hello/src/main/res/values/strings.xml
+++ b/feature-camerax-hello/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">feature-camerax-hello</string>
+    <string name="app_name">CameraX Hello</string>
+
 </resources>
